<resources>
    <string name="app_name">Javater</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tutorial_selection">TutorialSelection</string>
    <string name="tutorial0_title">Introduction to Java</string>
    <string name="tutorial0_content">Java is a general-purpose computer-programming language that is concurrent, class-based,
        object-oriented, and specifically designed to have as few implementation dependencies as possible.
        </string>
    <string name="tutorial0_content2a"><u>Let us look at HelloWorld.java </u></string>
    <string name="tutorial0_hello_world_example">
            \n
            public class HelloWorld {\n\n
                public static void main(String[] args) {\n\n
                    // Print \u0022Hello, World\u0022 to the terminal window.\n
                    System.out.println(\u0022Hello, World\u0022);\n\n
                }\n\n
            }\n\n
        </string>
    <string name="tutorial0_Testing_example">
        \n
        public class HelloWorld {\n\n
        public static void main(String[] args) {\n\n
        // Print \u0022Testing1234\u0022 as output.\n
        System.out.println(\u0022Hello, World\u0022);\n\n
        // Print statement to the terminal window.\n
        System.out.println(\u0022Testing 1 2 3 4\u0022);\n\n
        }\n\n
        }\n\n
    </string>
    <string name="tutorial0_FormattedJava_example">public class FormattedJava{\n
        //This program will print \u0022Testing 1 2 3 4\u0022 as output\n
        public static void main(String args[]){ \n
        int x = 100; \n System.out.printf(\u0022Printing simple integer&#58; x = %d\n\u0022, x);\n
        //this will print it up to 2 decimal places\n
        System.out.printf(\u0022Formatted with precison&#58; PI = %.2f\n\u0022, Math.PI);\n
        float n = 5.2f;// automatically appends zero to the rightmost part of decimal\n
        System.out.printf(\u0022Formatted to specific width&#58; n = %.4f\n\u0022, n);\n}\n
    </string>
    <string name="tutorial0_content2b"><u>The output result should be</u></string>
    <string name="tutorial0_content2b_result">Hello, World</string>
    <string name="tutorial0_content2c"><u>Now, try it yourself! : </u></string>
    <string name="tutorial0_hello_world_temp">\npublic class HelloWorld {\n\n
        public static void main(String[] args) {\n\n
        //Prints \u0022Hello, World\u0022 to the terminal window.\n
        System.out.println(______________________);\n\n
        }\n\n}\n\n
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="tutorial01_title">\nIntroduction\n</string>
    <string name="tutorial04_title">\nString and String Function\n</string>
    <string name="tutorial04_Content01">String is a sequence of characters and it treated as object.</string>
    <string name="tutorial04_Content02">class MyFirstJava{\n//This program will print a sentence as output\n
        public static void main(String args[]) {\n\n
        String message = \u0022Hello World\u0022;\n
        System.out.println(message);\n
        //Prints Hello world from variable message\n\n\t\t}\n\t}
    </string>
    <string name="tutorial04_Content03">However, String have its method, it is helpful for adopting to a different operation.Some of the methods are shows in following:\n\n
        1. Quotes in String\n
        2. String Length\n
        3. Uppercase and Lowercase String\n
        4. String Concatenation\n
        5. Finding String \n
        6. Sub String\n
        7. Replace String
    </string>
    <string name="tutorial04_title2">\t1. Quotes in String</string>
    <string name="tutorial04_Content04">When store a sentence in a string, quotes are needed, so how to quote in a sentence?</string>
    <string name="tutorial04_Content05">String normalString = \u0022hello i type a sentence\u0022;\nString aStringWithQuotes = \u0022this is a \'quote\'; in a string\u0022;
    </string>
    <string name="tutorial04_title3">\t2. String Length</string>
    <string name="tutorial04_Content06">One of the string method is to count the number of characters in the string,
        it can be use the length() method to perform this operation.\n</string>
    <string name="tutorial04_Content07">String normalString = \u0022hello\u0022;\n
        System.out.println(\u0022The length if this string is\u0022 + normalString.length() );\n
        //The output length will be 5
    </string>
    <string name="tutorial04_title4">\t3. Uppercase and Lowercase String</string>
    <string name="tutorial04_Content08">Uppercase and lowercase method can let you change the string to uppercase or lowercase easily.
    </string>
    <string name="tutorial04_Content08a">String message = \u0022Hello World\u0022;\n
        System.out.println( message.toUpperCase() );\n
        //Outputs \u0022HELLO WORLD\u0022\n
        System.out.println( message.toLowerCase() );\n
        //Outputs \u0022hello world\u0022
    </string>
    <string name="tutorial04_title5">\t4. String Concatenation</string>
    <string name="tutorial04_Content09">Like a value, String also can be concatenate with a plus \u0022+\u0022 operator.Anew string will be created.
    </string>
    <string name="tutorial04_Content09a">String message1 = \u0022Java\u0022;\nString message2 = \u0022World\u0022;\nSystem.out.println( message1 + \u0022 \u0022 + message2);\n
        //Output a new String \u0022Java World\u0022
    </string>
    <string name="tutorial04_title6">\t5. Finding String</string>
    <string name="tutorial04_Content10">If you want to find the text location, you can use the indexOf() function to find the occurence string.
        A position number will shown after calling this function. However, it can also find the string from  the specified index.\n
    </string>
    <string name="tutorial04_Content10a">int indexOf(String str)\n
        String message = \u0022Java is a programming language\u0022;\n
        System.out.println( message.indexOf(\u0022language\u0022));\n
        //Outputs 19\n\n
        int indexOf(String str, int fromIndex)\n
        //fromIndex: the index to start the search form\n
        String message1 = \u0022Java is a programming language\u0022;\n
        String  message2 = \u0022FYP topic is teach java\u0022\n
        System.out.println( message1.indexOf(message2 , 15));\n
        //Outputs -1, as it does not occur
    </string>
    <string name="tutorial04_title7">\t6. Substring</string>
    <string name="tutorial04_Content11">Substring is a method that select a substring to ba a new string.
        It can be used by passing a start index or both start index and end index.
        Please note that -1 can be represent the last character of  the end index.\n
    </string>
    <string name="tutorial04_Content11a">substring( int Startindex)\n
        String message = \u0022Java is a programming language\u0022;\n
        System.out.println( message.substring( 11 ));\n//Outputs \u0022gramming language\u0022\nsubstring(int Startindex, int Endindex)\nString message = \u0022Java is a programming language\u0022;\nSystem.out.println( message.substring( 19,-1 ));
        \n//Outputs \u0022language\u0022
    </string>
    <string name="tutorial04_title8">\t7. Replace String</string>
    <string name="tutorial04_Content12">This method replace a new string from a old string.
    </string>
    <string name="tutorial04_Content12a">String str = \u0022Java is a programming language\u0022;\n
        System.out.println(str.replace(\'v\',\'k\') );\n
        //Outputs \u0022Jaka is a programming language\u0022\n
        System.out.println(str.replace(\'p\',\'P\') );\n
        //Outputs \u0022Java is a Programming language\u0022
    </string>
    <string name="tutorial04_title9">\t8. Split String</string>
    <string name="tutorial04_Content13">The string split() method breaks a given string around matches of the given regular expression.</string>
    <string name="tutorial04_Content13a">// Java program to demonstrate working of split(regex,limit) with high limit.\npublic class GFG {\n
        public static void main(String args[]) {\n
		\tString str = \u0022javas@for@javas\u0022;\n\tString[] arrOfStr = str.split(\u0022@\u0022, 5);\n\nfor (String a : arrOfStr)\n
			\tSystem.out.println(a);\n}\n}
    </string>
    <string name="tutorial04_Content13b">Output:\njavas\nfor\njavas</string>
    <string name="tutorial04_title10">\t9. Equal String</string>
    <string name="tutorial04_Content14">In Java, string equals() method compares the two given strings based on the data/content of the string. If all the contents of both the strings are same then it returns true. If all characters do not match, then it returns false.</string>
    <string name="tutorial04_Content14a">// Java program to Compare two strings\n// lexicographically\n
        public class GFG {\n
        \tpublic static void main(String args[]) {\n
        \t\tString string1 = new String(\u0022javasforjavas\u0022);\n
        \t\tString string2 = new String(\u0022Practice\u0022);\n
        \t\tString string3 = new String(\u0022Javas\u0022);\n
        \t\tString string4 = new String(\u0022Javas\u0022);\n
        \t\tString string5 = new String(\u0022javas\u0022);\n\n
        // Comparing for String 1 != String 2\n
		\tSystem.out.println(\u0022Comparing\u0022 + string1 + \u0022 and \u0022 + string2
						+ \u0022 : \u0022 + string1.equals(string2));\n

		// Comparing for String 3 = String 4\n
		\tSystem.out.println(\u0022Comparing \u0022 + string3 + \u0022 and \u0022 + string4
						+ \u0022 : \u0022 + string3.equals(string4));\n

		// Comparing for String 4 != String 5\n
		System.out.println(\u0022Comparing \u0022 + string4 + \u0022 and \u0022v + string5
						+ \u0022 : \u0022 + string4.equals(string5));\n

		// Comparing for String 1 != String 4\n
		System.out.println(\u0022Comparing \u0022 + string1 + \u0022 and \u0022 + string4
						+ \u0022 : \u0022 + string1.equals(string4));\t\n}\n}
</string>
    <string name="tutorial04_Content14b">Output:\nComparing javasforjavas and Practice : false\nComparing javasforjavas and javasforjavas : true\nComparing Javasforjavas and javasforjavas : false</string>
    <string name="tutorial06_title">\nCondition statement&#40;I&#41; if..else statement\n</string>
    <string name="tutorial06_Content01">If statement</string>
    <string name="tutorial06_Content02">This statement requires conditional statement, if the condition is true, operation will be performed inside the statement block.</string>
    <string name="tutorial06_Content03">int a = 20;\nint b =10;\nif(a > b){\n
        System.out.println(\u0022it is greater than 10\u0022);\t\n}
</string>
    <string name="tutorial06_Content04">Else if / Nested if statement</string>
    <string name="tutorial06_Content05">This statement is used to specify a new condition while the if statement block is false. If it met the condition in the if..else statement, operation perform in the statement block. </string>
    <string name="tutorial06_Content06">int number = 16;\nif(number > 20){\n
        \t\tSystem.out.println(\u0022it is greater than 20\u0022);\n}\nelseif(number > 15){\n
        \t\tSystem.out.println(\u0022it is greater than 15\u0022);\n}
</string>
    <string name="tutorial06_Content07">Else statement</string>
    <string name="tutorial06_Content08">This statement is handle the false condition while all condition is false.</string>
    <string name="tutorial06_Content09">int number = 16;\nif(number > 20){\n
        \t\tSystem.out.println(\u0022it is greater than 20\u0022);\n}\n
        elseif(number > 15){\n
        \t\tSystem.out.println(\u0022it is greater than 15\u0022);\n
        }\n
        else{\n\t
        System.out.println(\u0022it is less than or equal to 15\u0022);\n}
</string>
</resources>