<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tutorial04">

        <TextView
            android:id="@+id/tutor04_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/tutorial04_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tutor04_Content01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content01"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content02"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_Content03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content03"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tutor04_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title2"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content04"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content05"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title3"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content06"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content07"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title4"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content08"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content08a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content08a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title5"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content09"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content09a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content09a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title6"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
        android:id="@+id/tutor04_Content10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike"
        android:padding="10dp"
        android:text="@string/tutorial04_Content10"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content10a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content10a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title7"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content11"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content11a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content11a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title8"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content12"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content12a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content12a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_title9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title9"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content13"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content13a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content13a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_Content13b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content13b"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tutor04_title10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_title10"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor04_Content14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content14"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor04_Content14a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content14a"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor04_Content14b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial04_Content14b"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


    </LinearLayout>

</ScrollView>