<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".tutorial06">

        <TextView
            android:id="@+id/tutor06_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/tutorial06_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tutor06_Content01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content01"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor06_Content02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content02"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor06_Content03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content03"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor06_Content04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content04"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor06_Content05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content05"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor06_Content06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content06"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tutor06_Content07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content07"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tutor06_Content08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content08"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tutor06_Content09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:padding="10dp"
            android:text="@string/tutorial06_Content09"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="#222222"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>